modified:   _posts/2025-02-24-blog-post-1.md

--- a/_posts/2025-02-24-blog-post-1.md
+++ b/_posts/2025-02-24-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: '5 years in McMaster, a lonely adventure'
+title: '5 years in McMaster, a meaningful adventure'
 date: 2025-10-24
 permalink: /posts/2025/02/blog-post-1/
 tags:
@@ -7,7 +7,11 @@ tags:
   - Miscellaneous Talks
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+Beginning in Covid
+======
+I enrolled in McMaster when it was pandemic, 2020. At that time it was literally "Zoom University" for everyone. We did our lab experiments at home, attended lectures and performed presentation on teams channels. It was a fun time playing around ardiuno and Raspberry Pis, and this also solidated my interest on electrical engineering. In my mind, computers was a friend that never lies to you. At hat time I also reviewed my skill on programming and hardware. I stopped the Java and html learned in high school and involved in Python and C++.
+Other than engineering, I was interested in commerce also on the effect from my father, who was a manager in car rental company. I helped him on management like accounting and project design during pandemic. I choose the one more year eng&mgt program when I saw that option was avaliable.
+
 
 Headings are cool
 ======
