--- a/_posts/2025-06-04-log-post-1.md
+++ b/_posts/2025-06-04-log-post-1.md
@@ -6,28 +6,28 @@ tags:
   - cool posts
   - Song Lyrics
 ---
-Too much for the past for one to memerize
-Too many words remained for one to read through the lines
-The ebb and flow of the crowd floods the word and paradise
-Along the time
-Every night brings a dream, but the day relentlessly keeps me awake
-All the rest with be torn up whenever a choice is made
-Every living soul in the fray striving for their own safe place
-Life is too long to end at a grave
-Just a drop of a water suffices
-Encompassed and swallowed through through space by the universe
-Back to the source
-Gone are those years living for a reason
-Here it comes, the moment of the scene of lost and found
-Personas played out on the stage
-Will return to the self when there's a curtain call
-Every night brings a dream, but the day relentlessly keeps me awake
-All the rest will be torn up whenever a choice is made
-Everyone has their own desire leading to the ultimate
-Life is too long to end at a grave
-Just a drop of a water suffices
-Still, I wish to embrace the world with my though
-A eulogy
-Time to leave where I have stood so long
-Letting you go, recover traces overlapped
-Ends, then begins
+Too much for the past for one to memerize  
+Too many words remained for one to read through the lines  
+The ebb and flow of the crowd floods the word and paradise  
+Along the time    
+Every night brings a dream, but the day relentlessly keeps me awake  
+All the rest with be torn up whenever a choice is made  
+Every living soul in the fray striving for their own safe place  
+Life is too long to end at a grave  
+Just a drop of a water suffices  
+Encompassed and swallowed through space by the universe  
+Back to the source  
+Gone are those years living for a reason  
+Here it comes, the moment of the scene of lost and found  
+Personas played out on the stage  
+Will return to the self when there's a curtain call  
+Every night brings a dream, but the day relentlessly keeps me awake  
+All the rest will be torn up whenever a choice is made  
+Everyone has their own desire leading to the ultimate  
+Life is too long to end at a grave  
+Just a drop of a water suffices  
+Still, I wish to embrace the world with my thoughts
+A eulogy    
+Time to leave where I have stood so long  
+Letting you go, recover traces overlapped  
+Ends, then begins  
